[package]
name = "git-repo-manager"
version = "0.1.0"
authors = ["luxagen <hello@luxagen.com>"]
homepage = "http://www.luxagen.com/product/git-repo-manager"
license = "AGPL-3.0-or-later"
edition = "2024"

[[bin]]
name = "grm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
regex = "1.10"
log = "0.4"
env_logger = "0.10"
walkdir = "2.4"
shellexpand = "3.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
