[package]
name = "git-repo-manager"
version = "0.1.0"
authors = ["luxagen <hello@luxagen.com>"]
homepage = "http://www.luxagen.com/product/git-repo-manager"
license = "AGPL-3.0-or-later"
edition = "2024"

[[bin]]
name = "grm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
regex = "1.10"
