[package]
name = "git-repo-manager"
version = "0.1.0"
authors = ["luxagen <hello@luxagen.com>"]
homepage = "http://www.luxagen.com/product/git-repo-manager"
license = "AGPL-3.0-or-later"
edition = "2024"

[[bin]]
name = "grm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
anyhow = "1.0.75"
regex = "1.9.5"
url = "2.4.1"
gix-url = "0.30.0"
bstr = "1.6.0"
once_cell = "1.18.0"
lazy_static = "1.4.0"
shell-escape = "0.1"
colored = "2.0.4"
