[package]
name = "grm-rs"
version = "0.1.0"
edition = "2021"
description = "Git Repository Manager - Rust implementation"

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
anyhow = "1.0.75"
regex = "1.9.5"
url = "2.4.1"
gix-url = "0.30.0"
bstr = "1.6.0"
once_cell = "1.18.0"
lazy_static = "1.4.0"
